fix: readability fixes

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -1,5 +1,5 @@
 body {
-	color: #fff;
+	color: #ddd;
 	background-color: #000;
 }
 
@@ -18,15 +18,15 @@ hr {
 }
 
 blockquote {
-	border-color: #fff;
+	border-color: #ddd;
 }
 
 h1,h2,h3,h4,h5,h6 {
-	color: #fff;
+	color: #ddd;
 }
 
 a,a:hover {
-	color: #fff;
+	color: #ddd;
 	text-decoration: underline;
 }
 
@@ -35,8 +35,13 @@ a:hover {
 }
 
 .post-tags .tags a {
-    border: 1px solid #fff;
-    color: #fff;
+    border: 1px solid #ddd;
+	color: #ddd;
+}
+
+.site-title a {
+	color: #ddd;
+	text-decoration: none !important;
 }
 
 .header nav,
